--- a/packages/melos/pubspec.yaml
+++ b/packages/melos/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   collection: ^1.14.12
   conventional_commit: ^0.5.0
   file: ^6.1.0
+  github: ^9.4.0
   glob: ^2.0.1
   graphs: ^2.1.0
   http: ^0.13.1
